DOC: actualización del docosaurus
Formateo archivos.
Reestructuro el repo.
Creo archivos necesarios.
Tomo reporte de todo lo que falta.

--- a/MuscleMate/docs/Feedback clase/19-03-2024.mdx
+++ b/MuscleMate/docs/Feedback clase/19-03-2024.mdx
@@ -1,4 +1,15 @@
-# Feedback 19-03-2024
+---
+title: Feedback 19-03-2024
+---
+
+
+
+
+
+
+
+**Grupo 3 - MuscleMate**
+
 
 - Por respeto a la audiencia hay que enfocar las cosas
 - Los anglicismos estan bien en las presentaciones
