--- a/MuscleMate/docs/ALN/Backend ALN.mdx
+++ b/MuscleMate/docs/ALN/Backend ALN.mdx
@@ -1,46 +1,46 @@
 # Backend TP
 
-
-| Versión | Fecha       | Autor      | Descripción                            |
-|---------|-------------|------------|----------------------------------------|
-| v1.0    | 2024-01-01  | Pedro Gonzalez| Creación del documento                 |
+| Versión | Fecha      | Autor          | Descripción                  |
+| ------- | ---------- | -------------- | ---------------------------- |
+| v1.0    | 2024-03-17 | Pedro González | Creación del documento       |
+| v2.0    | 2024-03-31 | Pedro González | Nuevas métricas actuliazadas |
 
 ## TP1: Porcentaje de nuevas ramas relacionadas con _Issues_ "En Progreso" (por Equipo, Cada Hora)
 
-![Branch Issue](/img/aln/back/tp1.png)
+![Branch Issue](/img/aln/back/2024-03-31-tp1.png)
 
 ## TP2: Porcentaje de PR relacionados con _Issues_ "En Revisión" (por Equipo, Cada Hora)
 
-![PR Issue](/img/aln/back/tp2.png)
+![PR Issue](/img/aln/back/2024-03-31-tp2.png)
 
 ## TP3: Porcentaje de PR fusionados relacionados con _Issues_ "Hechas" (por Equipo, Cada Hora)
 
-![PR Issue Done](/img/aln/back/tp3.png)
+![PR Issue Done](/img/aln/back/2024-03-31-tp3.png)
 
 ## TP4: Número de _Issues_ "En Progreso" (por Miembro, Cada Hora)
 
-![Open issues max limit](/img/aln/back/tp4.png)
+![Open issues max limit](/img/aln/back/2024-03-31-tp4.png)
 
 ## TP5: Número de _Issues_ "Hechos" (por Miembro, Semanalmente)
 
-![Open merge PR approved per member](/img/aln/back/tp5.png)
+![Open merge PR approved per member](/img/aln/back/2024-03-31-tp5.png)
 
 ## TP6: Porcentaje de PR fusionados aprobados (por Equipo, Cada Hora)
 
-![Open merge PR approved](/img/aln/back/tp6.png)
+![Open merge PR approved](/img/aln/back/2024-03-31-tp6.png)
 
 ## TP7: Porcentaje de PR fusionados aprobados (Por Miembro, Cada Hora)
 
-![Open merge PR approved per member](/img/aln/back/tp7.png)
+![Open merge PR approved per member](/img/aln/back/2024-03-31-tp7.png)
 
 ## TP8: Número de PR fusionados aprobados (Por Miembro, Semanalmente)
 
-![Open pr percetage](/img/aln/back/tp8.png)
+![Open pr percetage](/img/aln/back/2024-03-31-tp8.png)
 
 ## TP9: Porcentaje de PR de compañeros aprobados o comentados (Por Miembro, Semanalmente)
 
-![Open pr percetage](/img/aln/back/tp9.png)
+![Open pr percetage](/img/aln/back/2024-03-31-tp9.png)
 
 ## TP10: Número de PR de compañeros aprobados o comentados (Por Miembro, Semanalmente)
 
-![Open pr comments num](/img/aln/back/tp10.png)
+![Open pr comments num](/img/aln/back/2024-03-31-tp10.png)
