--- a/MuscleMate/docs/ALN/Frontend ALN.mdx
+++ b/MuscleMate/docs/ALN/Frontend ALN.mdx
@@ -1,79 +1,46 @@
 # Frontend TP
 
-
-| Versión | Fecha       | Autor      | Descripción                            |
-|---------|-------------|------------|----------------------------------------|
-| v1.0    | 2024-01-01  | Pedro Gonzalez| Creación del documento                 |
+| Versión | Fecha      | Autor          | Descripción                  |
+| ------- | ---------- | -------------- | ---------------------------- |
+| v1.0    | 2024-03-17 | Pedro González | Creación del documento       |
+| v2.0    | 2024-03-31 | Pedro González | Nuevas métricas actualizadas |
 
 ## TP1: Porcentaje de nuevas ramas relacionadas con _Issues_ "En Progreso" (por Equipo, Cada Hora)
 
-![Branch Issue](/img/aln/front/branch-issue.png)
+![Branch Issue](/img/aln/front/2024-03-31-tp1.png)
 
 ## TP2: Porcentaje de PR relacionados con _Issues_ "En Revisión" (por Equipo, Cada Hora)
 
-![PR Issue](/img/aln/front/porcentaje-pr-issues.png)
+![PR Issue](/img/aln/front/2024-03-31-tp2.png)
 
 ## TP3: Porcentaje de PR fusionados relacionados con _Issues_ "Hechas" (por Equipo, Cada Hora)
 
-![PR Issue Done](/img/aln/front/porcentaje-pr-fusionada-issue-hecha.png)
+![PR Issue Done](/img/aln/front/2024-03-31-tp3.png)
 
 ## TP4: Número de _Issues_ "En Progreso" (por Miembro, Cada Hora)
 
-### Alejandro Mateo Capilla
-
-![Alejandro Mateo Capilla](/img/aln/front/amc/open-issues.png)
-
-### David del Hoyo Carboso
-
-![David del Hoyo Carboso](/img/aln/front/dhc/open-issues.png)
-
-### Elena Tomás Vela
-
-Elena tenía asignada dos tareas asignadas con Pedro González Marcos.
-Se contabilizan en las de Pedro González Marcos pero no en Elena, por eso tiene 0 issues en Progreso.
-
-![Elena Tomás Vela](/img/aln/front/etv/open-issues.png)
-
-### Jorge Romero Limón
-
-![Jorge Romero Limón](/img/aln/front/jrl/open-issues.png)
-
-### Juan Carlos Moreno Pérez
-
-![Juan Carlos Moreno Pérez](/img/aln/front/jmp/open-issues.png)
-
-### Luis García Parras
-
-![Luis García Parras](/img/aln/front/lgp/open-issues.png)
-
-### Pedro González Marcos
-
-![Pedro González Marcos](/img/aln/front/pgm/open-issues.png)
-
-### Ángel Muñoz Prieto
-
-![Ángel Muñoz Prieto](/img/aln/front/amp/open-issues.png)
+![Tp4](/img/aln/front/2024-03-31-tp4.png)
 
 ## TP5: Número de _Issues_ "Hechos" (por Miembro, Semanalmente)
 
-![Open merge PR approved per member](/img/aln/front/num-issues-done-weekly.png)
+![Open merge PR approved per member](/img/aln/front/2024-03-31-tp5.png)
 
 ## TP6: Porcentaje de PR fusionados aprobados (por Equipo, Cada Hora)
 
-![Open merge PR approved](/img/aln/front/pr-fusionados-aprobados-equipo.png)
+![Open merge PR approved](/img/aln/front/2024-03-31-tp6.png)
 
 ## TP7: Porcentaje de PR fusionados aprobados (Por Miembro, Cada Hora)
 
-![Open merge PR approved per member](/img/aln/front/porcentaje-pr-fusionado-aprobado-miembro.png)
+![Open merge PR approved per member](/img/aln/front/2024-03-31-tp7.png)
 
 ## TP8: Número de PR fusionados aprobados (Por Miembro, Semanalmente)
 
-![Open pr percetage](/img/aln/front/num-pr-fusionado-aprobado.png)
+![Open pr percetage](/img/aln/front/2024-03-31-tp8.png)
 
 ## TP9: Porcentaje de PR de compañeros aprobados o comentados (Por Miembro, Semanalmente)
 
-![Open pr percetage](/img/aln/front/openpr-comments-porcentaje.png)
+![Open pr percetage](/img/aln/front/2024-03-31-tp9.png)
 
 ## TP10: Número de PR de compañeros aprobados o comentados (Por Miembro, Semanalmente)
 
-![Open pr comments num](/img/aln/front/openpr-comments.png)
+![Open pr comments num](/img/aln/front/2024-03-31-tp10.png)
