Doc: pilot user performance evaluation

--- a/MuscleMate/docs/Other Docs/Deliverable failure conditions/Deliverable Failure Conditions.mdx
+++ b/MuscleMate/docs/Other Docs/Deliverable failure conditions/Deliverable Failure Conditions.mdx
@@ -1,19 +1,23 @@
 ---
-title: Individual Failure Conditions
+title: Deliverable Failure Conditions
 ---
 
+#
+<center><h1>Deliverable Failure Conditions</h1></center>
+<center>![](/img/MuscleMateLogo.svg)</center>
+<center>**Grupo 3 - MuscleMate**</center>
+
+#
+
+| Versión | Fecha       | Autor      | Descripción                            |
+|---------|-------------|------------|----------------------------------------|
+| v1.0    | 2024-03-23  | David Dana Cabello   | Creación del documento                 |
 
 
-**Grupo 3 - MuscleMate**
 
 
 
-
-
-
-
-
-## Individual Failure Conditions:
+## Individual Failure Conditions
 #### I-1) Not being at both the beginning and the end of an evaluation class; with the appropriate justification
 - See the “Justification Guidelines for Evaluation Days” (JGED) document in the EV.
 
