--- a/MuscleMate/docs/Problems found/problems.mdx
+++ b/MuscleMate/docs/Problems found/problems.mdx
@@ -8,6 +8,8 @@ title: Problems, Solutions and Metrics
 | ------- | ---------- | ----------------------------- |
 | 1.0     | 2024-03-01 | Versión inicial del documento |
 | 2.0     | 2024-03-03 | Corrección del documento      |
+| 3.0     | 2024-04-01 | Corrección del documento      |
+
 
 ## 1. Resumen ejecutivo
 
@@ -46,3 +48,29 @@ No aplica
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |
 | Falta de comunicación efectiva entre backend y frontend: como es la falta de un manual de instrucciones para el manejo del backend en local y la espera de frontend del despliegue de api | Realizar el manual y una comunicación mas constante entre "departamentos". Además inclusión de un miembro del grupo como "vigilante" de ambos grupos | Acelerar el proceso de desarrollo para tener un "prototipo funcional" desplegado antes de la entrega |                         |
 | Backend se basa en los modelos nuevos actualizados y frontend se basa en los mockups no actualizados                                                                                      | Una comunicación mas constante entre los dos "departamentos"                                                                                         | Facilitar el desarrollo y la cohesión de ambos departamentos                                         |                         |
+
+## Al crearse el nuevo formato de gestión de problemas hemos creado una nueva medida a la hora de abordar la solución de un problema, las cuáles son: 
+ - Deficiente: Esta medida indica que la solución implementada tiene una calidad notablemente baja o insatisfactoria en relación con su propósito o función prevista. Sugiere que la solución no está cumpliendo adecuadamente con los requisitos o expectativas, y que se requieren mejoras significativas para corregir deficiencias o deficiencias substanciales.
+ - Mejorable: Esta medida sugiere que la solución tiene margen para mejorar o perfeccionarse aún más. Indica que, aunque la solución actual puede ser funcional, eficaz o aceptable en cierta medida, existen oportunidades para optimizarla, fortalecerla o hacerla más eficiente para lograr un mejor rendimiento o resultados.
+ - Completa:  Esta medida indica que la solución está bien desarrollada, aborda adecuadamente los problemas identificados y cumple con los requisitos o expectativas establecidos. Sugiere que la solución proporciona una respuesta integral y satisfactoria a la situación o desafío en cuestión, sin dejar aspectos importantes sin atender o sin resolver.
+
+
+### Semana 6 (05/03/2024 - 12/03/2024)
+
+| Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solucion?                                                                           | Medida de la Solución | ¿Seguimos con esa solución? |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |---------------------------|
+| Falta de documentación de la API por parte del equipo Backend lo que propicia una dificultad a la hora de la realizacion de tareas por parte del front                                    | Creación de una issue por parte del equipo Frontend en el Project de Backend comentando la situación para la creación de dicha documentación         | Medimos la solución mediante la calidad de la documentación proporcionada                            | Completa                | Sí, se seguirá con esta solución de aquí a final de proyecto debido a la gran eficencia de la misma|
+
+### Semana 7 (12/03/2024 - 18/03/2024)
+
+| Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solución?                                                                           | Análisis de la solución | ¿Seguimos con esta solución?|
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- | ----------------------------|
+| Falta de personal en el equipo de Front lo que da lugar a un retraso en el desarrollo de las actividades                                                                                  | Apoyo de integrantes por parte del backend al equipo frontend                                                                                        | Estado de finalización de las tareas del frontend                                                    | Completa                | Sí, seguirá con la solución indicada en el futuro de proyecto ya sea para el apoyo al equipo de Front o de Back |
+| Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Darle prioridad a las tareas de documentacion tratandolas como si fueran de desarrollo                                                               | Miramos la fecha de finalización de las tareas                                                       | Deficiente              | No, no se seguirá con esa solución debido a no que ha sido todo lo eficiente que se esperaba|
+
+
+### Semana 8 (19/03/2024 - 24/03/2024)
+
+| Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solucion?                                                                           | Medida de la Solución | ¿Seguimos con esa solución? |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |--------------------------|
+| Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Anuncio por parte del coordinador del proyecto para el aviso de la realización de las tareas de documentación                                        | Medimos la solución mediante la calidad de la documentación proporcionada                            | Mejorable               | Si, seguiremos 
