--- a/MuscleMate/docs/Lesson Learnt/lessons-learnt.mdx
+++ b/MuscleMate/docs/Lesson Learnt/lessons-learnt.mdx
@@ -9,6 +9,7 @@ title: Lessons learnt
 | 1.0     | 2024-02-22 | Versión inicial del documento |
 | 2.0     | 2024-03-01 | Actualización del documento   |
 | 3.0     | 2024-03-02 | Actualización del documento   |
+| 4.0     | 2024-04-01 | Actualización del documento   |
 
 # Resumen ejecutivo
 
@@ -34,6 +35,17 @@ cerciorarse de su total y correcto funcionamiento. Esto se observó durante los
 primeros días del sprint y se pudo solucionar conforme se avanzaba en el proyecto.
 Es necesario para el siguiente sprint comenzar a hacer las cosas bien desde el
 primer día para evitar problemas y retrasos posibles.
+
+## Documentación
+Se reconoce la relevancia de una buena documentación en los proyectos, 
+tanto en la generación de documentación clara y eficiente como en la
+importancia de la documentación como código.
+
+## Aprendizaje continuo
+Varios participantes mencionan la importancia
+de seguir aprendiendo nuevas tecnologías y adaptarse
+al trabajo en grupo.
+
 
 ## Priorización Nuevas Tecnologías
 
