--- a/MuscleMate/docs/Lesson Learnt/lessons-learnt.mdx
+++ b/MuscleMate/docs/Lesson Learnt/lessons-learnt.mdx
@@ -26,6 +26,11 @@ pero aun así siguen surgiendo estos problemas entre los equipos de frontend y
 backend. Sin embargo, el equipo es consciente de eso y se han planteado estrategias
 para solucionarlo de cara al siguiente sprint y comunicarse de la mejor manera posible.
 
+## Autonomía y colaboración
+Se hace hincapié en la importancia de ser autónomo en la realización de tareas,
+pero también en saber pedir ayuda cuando sea necesario y en trabajar de manera 
+colaborativa en equipo.
+
 ## Revisar Tareas
 
 A raíz del problema anterior ocurrieron ciertos problemas a la hora de revisar tareas.
